k8s/prod/0.4/ab/flask-k8s-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-k8s-dr
spec:
  host: flask-k8s
  subsets:
  - name: prod
    labels:
      version: "0.3"
  - name: canary
    labels:
      version: "0.4"
